--- a/mi-portfolio/src/app/inicio-linea-temporal/inicio-linea-temporal.component.html
+++ b/mi-portfolio/src/app/inicio-linea-temporal/inicio-linea-temporal.component.html
@@ -28,10 +28,10 @@
   <div class="linea">
     <div class="filaSuperiorIzquierda">
         <div class="enlacesContenedor">
-          <p class="titulo">ESTUDIOS EN EL GRADO SUPERIOR DE DAM</p>
+          <p class="titulo">ESTANCIA EN SERBATIC</p>
         </div>
         <div class="enlacesContenedor">
-          <p class="textoTrayectorias">Primeros pasos en el mundo de la programación en el primer año, y en el segundo especialización en <span class="resaltarLetras">Java en el desarrolllo de aplicaciones</span>. Aprendizaje de programar en <span class="resaltarLetras">Python</span> y android con <span class="resaltarLetras">Android Studio</span>, pero en menor medida que <span class="resaltarLetras">Java</span>. Desarrollo de varias aplicaciones como mi proyecto final en una <span class="resaltarLetras">aplicación Movil</span> y uso de <span class="resaltarLetras">despliegue de aplicaciones</span> para una funcionalidad final.</p>
+          <p class="textoTrayectorias">Aprendizaje en el desarrrollo web con <span class="resaltarLetras">Java</span> en el uso de <br/> <span class="resaltarLetras">Jakarta EE</span>, uso de nuevos IDEs de programación en Java como <span class="resaltarLetras">IntelliJ</span>. Uso de herramientas orientadas de Back como <span class="resaltarLetras">Postman</span> y <span class="resaltarLetras">Docker</span>. Desarrollo de varios proyectos web como el <br/> <span class="resaltarLetras">Acortador de URLs</span> o una <span class="resaltarLetras">Tienda online</span>.</p>
         </div>
     </div>
     <div class="filaLinea">
@@ -44,7 +44,54 @@
     </div>
     <div class="filaSuperiorDerecha">
         <div class="enlacesContenedor">
-          <p class="titulo">10/2022 - 12/2024</p>
+          <p class="titulo">09/2024 - 12/2024</p>
+        </div>
+    </div>
+    
+  </div>
+  <div class="linea">
+    <div class="filaSuperiorIzquierda">
+        <div class="enlacesContenedor">
+          <p class="titulo">01/2025 - 07/2025</p>
+        </div>
+    </div>
+    <div class="filaLinea">
+      <div class="contenedor">
+        <div class="figura">
+          <div class="circulo"></div>
+           <div class="barra"></div>
+        </div>
+      </div>
+    </div>
+    <div class="filaSuperiorDerecha">
+        <div class="enlacesContenedor">
+          <p class="titulo">ESTUDIO Y CURSOS DE DESARROLLO WEB</p>
+        </div>
+        <div class="enlacesContenedor">
+          <p class="textoTrayectorias">Aprendizaje en lenguajes de programacion orientados en el desarrollo web. Primero con <span class="resaltarLetras">JavaScript</span>, después con <span class="resaltarLetras">Spring</span> y <span class="resaltarLetras">Springboot</span> con pequeños proyectos para aplicar el contenido, usando bases de datos relacionales como <span class="resaltarLetras">MySQL</span>. Por último conociminetos en el diseño más orientado al <span class="resaltarLetras">Front</span> con <span class="resaltarLetras">Angular</span> y proyectos juntando las 3 tecnologías en proyectos completos.</p>
+        </div>
+    </div>
+  </div>
+  <div class="linea">
+    <div class="filaSuperiorIzquierda">
+        <div class="enlacesContenedor">
+          <p class="titulo">Yorel</p>
+        </div>
+        <div class="enlacesContenedor">
+          <p class="textoTrayectorias">Aprendizaje en el desarrrollo web con <span class="resaltarLetras">Java</span> en el uso de <br/> <span class="resaltarLetras">Jakarta EE</span>, uso de nuevos IDEs de programación en Java como <span class="resaltarLetras">IntelliJ</span>. Uso de herramientas orientadas de Back como <span class="resaltarLetras">Postman</span> y <span class="resaltarLetras">Docker</span>. Desarrollo de varios proyectos web como el <br/> <span class="resaltarLetras">Acortador de URLs</span> o una <span class="resaltarLetras">Tienda online</span>.</p>
+        </div>
+    </div>
+    <div class="filaLinea">
+      <div class="contenedor">
+        <div class="figura">
+          <div class="circulo"></div>
+           <div class="barra"></div>
+        </div>
+      </div>
+    </div>
+    <div class="filaSuperiorDerecha">
+        <div class="enlacesContenedor">
+          <p class="titulo">09/2024 - 12/2024</p>
         </div>
     </div>
     
@@ -55,32 +102,7 @@
           <p class="titulo">10/2022 - 12/2024</p>
         </div>
     </div>
-    <div class="filaLinea">
-      <div class="contenedor">
-        <div class="figura">
-          <div class="circulo"></div>
-           <div class="barra"></div>
-        </div>
-      </div>
-    </div>
-    <div class="filaSuperiorDerecha">
-        <div class="enlacesContenedor">
-          <p class="titulo">ESTUDIOS EN EL GRADO SUPERIOR DE DAM</p>
-        </div>
-        <div class="enlacesContenedor">
-          <p class="textoTrayectorias">Primeros pasos en el mundo de la programación en el primer año, y en el segundo especialización en <span class="resaltarLetras">Java en el desarrolllo de aplicaciones</span>. Aprendizaje de programar en <span class="resaltarLetras">Python</span> y android con <span class="resaltarLetras">Android Studio</span>, pero en menor medida que <span class="resaltarLetras">Java</span>. Desarrollo de varias aplicaciones como mi proyecto final en una <span class="resaltarLetras">aplicación Movil</span> y uso de <span class="resaltarLetras">despliegue de aplicaciones</span> para una funcionalidad final.</p>
-        </div>
-    </div>
-  </div>
-  <div class="linea">
-    <div class="filaSuperiorIzquierda">
-        <div class="enlacesContenedor">
-          <p class="titulo">ESTUDIOS EN EL GRADO SUPERIOR DE DAM</p>
-        </div>
-        <div class="enlacesContenedor">
-          <p class="textoTrayectorias">Primeros pasos en el mundo de la programación en el primer año, y en el segundo especialización en <span class="resaltarLetras">Java en el desarrolllo de aplicaciones</span>. Aprendizaje de programar en <span class="resaltarLetras">Python</span> y android con <span class="resaltarLetras">Android Studio</span>, pero en menor medida que <span class="resaltarLetras">Java</span>. Desarrollo de varias aplicaciones como mi proyecto final en una <span class="resaltarLetras">aplicación Movil</span> y uso de <span class="resaltarLetras">despliegue de aplicaciones</span> para una funcionalidad final.</p>
-        </div>
-    </div>
+    
     <div class="filaLinea">
       <div class="contenedor">
         <div class="figura">
@@ -109,7 +131,10 @@
     </div>
     <div class="filaSuperiorDerecha">
         <div class="enlacesContenedor">
-          <p class="titulo">10/2022 - 12/2024</p>
+          <p class="titulo">ESTUDIOS EN EL GRADO SUPERIOR DE DAM</p>
+        </div>
+        <div class="enlacesContenedor">
+          <p class="textoTrayectorias">Primeros pasos en el mundo de la programación en el primer año, y en el segundo especialización en <span class="resaltarLetras">Java en el desarrolllo de aplicaciones</span>. Aprendizaje de programar en <span class="resaltarLetras">Python</span> y android con <span class="resaltarLetras">Android Studio</span>, pero en menor medida que <span class="resaltarLetras">Java</span>. Desarrollo de varias aplicaciones como mi proyecto final en una <span class="resaltarLetras">aplicación Movil</span> y uso de <span class="resaltarLetras">despliegue de aplicaciones</span> para una funcionalidad final.</p>
         </div>
     </div>
   </div>
