--- a/mi-portfolio/src/app/inicio/inicio.component.css
+++ b/mi-portfolio/src/app/inicio/inicio.component.css
@@ -12,7 +12,7 @@
 
 .slide:not(.visible) {
   opacity: 0;
-  transform: translateY(50px);
+  transform: translateY(10px);
 }
 
 .mensaje {
@@ -21,16 +21,16 @@
   left: 20%;
   width: 60%;
   transform: translateX(-50%);
-  background: rgb(19, 20, 23);
+  background: var(--negro-1);
   border-radius: 7px;
   padding: 1rem 1.5rem;
-  color: white;
-  font-family: 'Ubuntu', sans-serif;
+  color: var(--blanco-1);
+  font-family: var(--Texto);
   text-align: center;
   font-size: 0.6rem;
   letter-spacing: 0.1rem;
-  border: 0.1rem solid rgba(68, 214, 44, 0.2);
-  box-shadow: 0.2rem 0.2rem 0 rgb(69, 196, 49);
+  border: 0.1rem solid var(--color-2);
+  box-shadow: 0.2rem 0.2rem 0 var(--color-1);
   z-index: 9999;
   opacity: 0;
 }
@@ -53,16 +53,16 @@
     left: 30%;
     width: 40%;
     transform: translateX(-50%);
-    background: rgb(19, 20, 23);
+    background: var(--negro-1);
     border-radius: 10px;
     padding: 1rem 1.5rem;
-    color: white;
-    font-family: 'Ubuntu', sans-serif;
+    color: var(--blanco-1);
+    font-family: var(--Texto);
     text-align: center;
     font-size: 1rem;
     letter-spacing: 0.1rem;
-    border: 0.1rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: 0.3rem 0.3rem 0 rgb(69, 196, 49);
+    border: 0.1rem solid var(--color-2);
+    box-shadow: 0.3rem 0.3rem 0 var(--color-1);
     z-index: 9999;
     opacity: 0;
   }
@@ -75,16 +75,16 @@
     left: 37.5%;
     width: 25%;
     transform: translateX(-50%);
-    background: rgb(19, 20, 23);
+    background: var(--negro-1);
     border-radius: 10px;
     padding: 1rem 1.5rem;
-    color: white;
-    font-family: 'Ubuntu', sans-serif;
+    color: var(--blanco-1);
+    font-family: var(--Texto);
     text-align: center;
     font-size: 1.2rem;
     letter-spacing: 0.1rem;
-    border: 0.1rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: 0.6rem 0.6rem 0 rgb(69, 196, 49);
+    border: 0.1rem solid var(--color-2);
+    box-shadow: 0.6rem 0.6rem 0 var(--color-1);
     z-index: 9999;
     opacity: 0;
   }
