--- a/mi-portfolio/src/app/proyectos-principales/proyectos-principales.component.css
+++ b/mi-portfolio/src/app/proyectos-principales/proyectos-principales.component.css
@@ -16,17 +16,17 @@
 }
 
 .nombre {
-  color: white;
-  font-family: 'Alfa Slab One', sans-serif;
+  color: var(--blanco-1);
+  font-family: var(--Titulo);
   font-size: 1.8rem;
   letter-spacing: 0.2rem;
   margin: 0;
-  -webkit-text-stroke: 0.07rem black;
+  -webkit-text-stroke: 0.07rem var(--negro-1);
   text-shadow:
-    0.2rem 0.2rem 0 rgb(69, 196, 49),
-    0rem 0rem 0 #30f37e,
-    0rem 0rem 0 #30f37e,
-    0rem 0rem 0 #30f37e;
+    0.2rem 0.2rem 0 var(--color-1),
+    0rem 0rem 0 var(--color-1),
+    0rem 0rem 0 var(--color-1),
+    0rem 0rem 0 var(--color-1);
 }
 
 .filaInferior {
@@ -90,9 +90,9 @@
 .botonIzquierda::after {
   content: "";
   position: absolute;
-  background-color: rgba(22, 24, 26);
-  border: 0.08rem solid rgba(68, 214, 44, 0.2);
-  box-shadow: 0.15rem 0.15rem 0 rgb(69, 196, 49);
+  background-color: var(--negro-1);
+  border: 0.08rem solid var(--color-2);
+  box-shadow: 0.15rem 0.15rem 0 var(--color-1);
   border-radius: 2px;
   transition: background-color 0.3s ease;
 }
@@ -101,9 +101,9 @@
 .botonDerecha::after {
   content: "";
   position: absolute;
-  background-color: rgba(22, 24, 26);
-  border: 0.08rem solid rgba(68, 214, 44, 0.2);
-  box-shadow: -0.15rem -0.15rem 0 rgb(69, 196, 49);
+  background-color: var(--negro-1);
+  border: 0.08rem solid var(--color-2);
+  box-shadow: -0.15rem -0.15rem 0 var(--color-1);
   border-radius: 2px;
   transition: background-color 0.3s ease;
 }
@@ -149,30 +149,30 @@
 }
 
 .botonIzquierda:hover::before {
-  background-color: rgba(22, 24, 26);
-  border: 0.08rem solid rgba(68, 214, 44, 0.2);
-  box-shadow: 0.15rem 0.15rem 0 rgb(69, 196, 49);
+  background-color: var(--negro-1);
+  border: 0.08rem solid var(--color-2);
+  box-shadow: 0.15rem 0.15rem 0 var(--color-1);
   z-index: 1;
 }
 
 .botonIzquierda:hover::after {
-  background-color: rgba(22, 24, 26);
-  border: 0.08rem solid rgba(68, 214, 44, 0.2);
-  box-shadow: 0.15rem 0.15rem 0 rgb(69, 196, 49);
+  background-color: var(--negro-1);
+  border: 0.08rem solid var(--color-2);
+  box-shadow: 0.15rem 0.15rem 0 var(--color-1);
   z-index: 2;
 }
 
 .botonDerecha:hover::before {
-  background-color: rgba(22, 24, 26);
-  border: 0.08rem solid rgba(68, 214, 44, 0.2);
-  box-shadow: -0.15rem -0.15rem 0 rgb(69, 196, 49);
+  background-color: var(--negro-1);
+  border: 0.08rem solid var(--color-2);
+  box-shadow: -0.15rem -0.15rem 0 var(--color-1);
   z-index: 2;
 }
 
 .botonDerecha:hover::after {
-  background-color: rgba(22, 24, 26);
-  border: 0.08rem solid rgba(68, 214, 44, 0.2);
-  box-shadow: -0.15rem -0.15rem 0 rgb(69, 196, 49);
+  background-color: var(--negro-1);
+  border: 0.08rem solid var(--color-2);
+  box-shadow: -0.15rem -0.15rem 0 var(--color-1);
   z-index: 1;
 }
 
@@ -188,12 +188,12 @@
 
 .card {
   width: 14rem;
-  background: rgba(22, 24, 26);
+  background: var(--negro-1);
   backdrop-filter: blur(10px);
   border-radius: 7px;
   padding: 1rem;
-  border: 0.1rem solid rgba(68, 214, 44, 0.2);
-  box-shadow: 0.3rem 0.3rem 0 rgba(69, 196, 49);
+  border: 0.1rem solid var(--color-2);
+  box-shadow: 0.3rem 0.3rem 0 var(--color-1);
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -212,12 +212,12 @@
 
 .indicadores {
   width: auto;
-  background: rgba(22, 24, 26);
+  background: var(--negro-1);
   backdrop-filter: blur(10px);
   border-radius: 3px;
   padding: 0.3rem 0.7rem;
-  border: 0.1rem solid rgba(68, 214, 44, 0.2);
-  box-shadow: 0.2rem 0.2rem 0 rgba(69, 196, 49);
+  border: 0.1rem solid var(--color-2);
+  box-shadow: 0.2rem 0.2rem 0 var(--color-1);
   text-align: center;
   display: flex;
   flex-direction: row;
@@ -228,8 +228,8 @@
   width: 1rem;
   height: 0.2rem;
   border-radius: 10px;
-  background-color: rgba(233, 236, 232, 0.8);
-  border: 0.1rem rgba(233, 236, 232, 0.8);
+  background-color: var(--blanco-1);
+  border: 0.1rem var(--blanco-1);
   transition: all 0.3s ease;
   cursor: pointer;
 }
@@ -239,8 +239,8 @@
 }
   
 .indicador.activo {
-  background-color: rgba(69, 196, 49);
-  border: 0.1rem rgba(69, 196, 49);
+  background-color: var(--color-1);
+  border: 0.1rem var(--color-1);
   transform: scale(1.3);
 }
 
@@ -253,10 +253,10 @@
 }
 
 .titulo {
-  color: white;
+  color: var(--blanco-1);
   margin: 0;
   font-size: 1.3rem;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: var(--Titulo);
   width: 100%;
   text-align: start;
   font-weight: 400;
@@ -278,12 +278,12 @@
 
 .botonEnlace {
   position: relative;
-  background: rgba(69, 196, 49);
+  background: var(--color-1);
   border: none;
   border-radius: 5px;
   width: 1.5rem;
   height: 1.5rem;
-  color: black;
+  color: var(--negro-2);
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -291,7 +291,7 @@
   font-size: 1.1em;
   line-height: 1;
   text-decoration: none;
-  box-shadow: 0 0 20px 6px rgba(0, 0, 0, 0.35);
+  box-shadow: 0 0 20px 6px var(--negro-2);
 }
 
 .material-symbols-outlined {
@@ -300,7 +300,7 @@
 
 .descripcion {
   width: auto;
-  background: rgba(69, 196, 49);
+  background: var(--color-1);
   backdrop-filter: blur(10px);
   border-radius: 7px;
   padding: 0.7rem;
@@ -310,11 +310,11 @@
 }
 
 .texto {
-  color: rgba(22, 24, 26);
+  color: var(--negro-1);
   margin: 0;
   line-height: 1.6;
   font-size: 0.6rem;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: var(--Texto);
   text-align: start;
   font-weight: bold;
   display: -webkit-box;
@@ -336,9 +336,9 @@
   width: 100%;
   aspect-ratio: 5/4;
   border-radius: 7px;
-  border: 0.3rem rgb(232, 236, 241);
+  border: 0.3rem var(--blanco-1);
   padding: 1rem;
-  background: rgb(232, 236, 241);
+  background: var(--blanco-1);
   backdrop-filter: blur(2rem);
   object-fit: contain;
 }
@@ -356,9 +356,9 @@
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
-  color: rgba(22, 24, 26);
-  border: 0.15rem solid rgba(68, 214, 44, 0.2);
-  box-shadow: 0 0 20px 6px rgba(0, 0, 0, 0.35);
+  color: var(--negro-1);
+  border: 0.15rem solid var(--color-2);
+  box-shadow: 0 0 20px 6px var(--negro-2);
   border-radius: 7px;
   padding: 0.5rem;
 }
@@ -384,17 +384,17 @@
   }
 
   .nombre {
-    color: white;
-    font-family: 'Alfa Slab One', sans-serif;
+    color: var(--blanco-1);
+    font-family: var(--Titulo);
     font-size: 3.2rem;
     letter-spacing: 0.2rem;
     margin: 0;
-    -webkit-text-stroke: 0.1rem black;
+    -webkit-text-stroke: 0.1rem var(--negro-1);
     text-shadow:
-      0.3rem 0.3rem 0 rgb(69, 196, 49),
-      0rem 0rem 0 #30f37e,
-      0rem 0rem 0 #30f37e,
-      0rem 0rem 0 #30f37e;
+      0.3rem 0.3rem 0 var(--color-1),
+      0rem 0rem 0 var(--color-1),
+      0rem 0rem 0 var(--color-1),
+      0rem 0rem 0 var(--color-1);
   }
 
   .filaInferior {
@@ -440,9 +440,9 @@
   .botonIzquierda::after {
     content: "";
     position: absolute;
-    background-color: rgba(22, 24, 26);
-    border: 0.08rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: 0.25rem 0.25rem 0 rgb(69, 196, 49);
+    background-color: var(--negro-1);
+    border: 0.08rem solid var(--color-2);
+    box-shadow: 0.25rem 0.25rem 0 var(--color-1);
     border-radius: 4px;
     transition: background-color 0.3s ease;
   }
@@ -451,9 +451,9 @@
   .botonDerecha::after {
     content: "";
     position: absolute;
-    background-color: rgba(22, 24, 26);
-    border: 0.08rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: -0.25rem -0.25rem 0 rgb(69, 196, 49);
+    background-color: var(--negro-1);
+    border: 0.08rem solid var(--color-2);
+    box-shadow: -0.25rem -0.25rem 0 var(--color-1);
     border-radius: 4px;
     transition: background-color 0.3s ease;
   }
@@ -499,30 +499,30 @@
   }
 
   .botonIzquierda:hover::before {
-    background-color: rgba(22, 24, 26);
-    border: 0.08rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: 0.25rem 0.25rem 0 rgb(69, 196, 49);
+    background-color: var(--negro-1);
+    border: 0.08rem solid var(--color-2);
+    box-shadow: 0.25rem 0.25rem 0 var(--color-1);
     z-index: 1;
   }
 
   .botonIzquierda:hover::after {
-    background-color: rgba(22, 24, 26);
-    border: 0.08rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: 0.25rem 0.25rem 0 rgb(69, 196, 49);
+    background-color: var(--negro-1);
+    border: 0.08rem solid var(--color-2);
+    box-shadow: 0.25rem 0.25rem 0 var(--color-1);
     z-index: 2;
   }
 
   .botonDerecha:hover::before {
-    background-color: rgba(22, 24, 26);
-    border: 0.08rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: -0.25rem -0.25rem 0 rgb(69, 196, 49);
+    background-color: var(--negro-1);
+    border: 0.08rem solid var(--color-2);
+    box-shadow: -0.25rem -0.25rem 0 var(--color-1);
     z-index: 2;
   }
 
   .botonDerecha:hover::after {
-    background-color: rgba(22, 24, 26);
-    border: 0.08rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: -0.25rem -0.25rem 0 rgb(69, 196, 49);
+    background-color: var(--negro-1);
+    border: 0.08rem solid var(--color-2);
+    box-shadow: -0.25rem -0.25rem 0 var(--color-1);
     z-index: 1;
   }
 
@@ -538,12 +538,12 @@
 
   .card {
     width: 30.5rem;
-    background: rgba(22, 24, 26);
+    background: var(--negro-1);
     backdrop-filter: blur(10px);
     border-radius: 10px;
     padding: 2rem;
-    border: 0.1rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: 0.4rem 0.4rem 0 rgba(69, 196, 49);
+    border: 0.1rem solid var(--color-2);
+    box-shadow: 0.4rem 0.4rem 0 var(--color-1);
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -554,12 +554,12 @@
 
   .indicadores {
     width: auto;
-    background: rgba(22, 24, 26);
+    background: var(--negro-1);
     backdrop-filter: blur(10px);
     border-radius: 5px;
     padding: 0.5rem 1rem;
-    border: 0.1rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: 0.2rem 0.2rem 0 rgba(69, 196, 49);
+    border: 0.1rem solid var(--color-2);
+    box-shadow: 0.2rem 0.2rem 0 var(--color-1);
     text-align: center;
     display: flex;
     flex-direction: row;
@@ -570,8 +570,8 @@
     width: 1.3rem;
     height: 0.3rem;
     border-radius: 10px;
-    background-color: rgba(233, 236, 232, 0.8);
-    border: 0.1rem rgba(233, 236, 232, 0.8);
+    background-color: var(--blanco-1);
+    border: 0.1rem var(--blanco-1);
     transition: all 0.3s ease;
     cursor: pointer;
   }
@@ -581,16 +581,16 @@
   }
     
   .indicador.activo {
-    background-color: rgba(69, 196, 49);
-    border: 0.1rem rgba(69, 196, 49);
+    background-color: var(--color-1);
+    border: 0.1rem var(--color-1);
     transform: scale(1.3);
   }
 
   .titulo {
-    color: white;
+    color: var(--blanco-1);
     margin: 0;
     font-size: 1.7rem;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: var(--Titulo);
     width: 100%;
     text-align: start;
     font-weight: 500;
@@ -607,12 +607,12 @@
 
   .botonEnlace {
     position: relative;
-    background: rgba(69, 196, 49);
+    background: var(--color-1);
     border: none;
     border-radius: 5px;
     width: 2.5rem;
     height: 2.5rem;
-    color: black;
+    color: var(--negro-2);
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -628,7 +628,7 @@
 
   .descripcion {
     width: auto;
-    background: rgba(69, 196, 49);
+    background: var(--color-1);
     backdrop-filter: blur(10px);
     border-radius: 10px;
     padding: 1rem;
@@ -638,11 +638,11 @@
   }
 
   .texto {
-    color: rgba(22, 24, 26);
+    color: var(--negro-1);
     margin: 0;
     line-height: 1.6;
     font-size: 0.9rem;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: var(--Texto);
     text-align: start;
     font-weight: bold;
     display: -webkit-box;
@@ -656,9 +656,9 @@
     width: 100%;
     aspect-ratio: 3/2;
     border-radius: 10px;
-    border: 0.3rem rgb(232, 236, 241);
+    border: 0.3rem var(--blanco-1);
     padding: 2rem;
-    background: rgb(232, 236, 241);
+    background: var(--blanco-1);
     backdrop-filter: blur(2rem);
     object-fit: contain;
   }
@@ -668,8 +668,8 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    color: rgba(22, 24, 26);
-    border: 0.15rem solid rgba(68, 214, 44, 0.2);
+    color: var(--negro-1);
+    border: 0.15rem solid var(--color-2);
     border-radius: 10px;
     padding: 0.5rem;
   }
@@ -692,20 +692,20 @@
   }
 
   .nombre {
-    color: white;
-    font-family: 'Alfa Slab One', sans-serif;
+    color: var(--blanco-1);
+    font-family: var(--Titulo);
     font-size: 4.5rem;
     letter-spacing: 0.2rem;
     margin: 0;
-    -webkit-text-stroke: 0.15rem black;
+    -webkit-text-stroke: 0.15rem var(--negro-1);
     text-shadow:
-      0.5rem 0.5rem 0 rgb(69, 196, 49),
-      0rem 0rem 0 #30f37e,
-      0rem 0rem 0 #30f37e,
-      0rem 0rem 0 #30f37e;
+      0.5rem 0.5rem 0 var(--color-1),
+      0rem 0rem 0 var(--color-1),
+      0rem 0rem 0 var(--color-1),
+      0rem 0rem 0 var(--color-1);
   }
 
-    .filaInferior {
+  .filaInferior {
     display: flex;
     align-items: stretch;
     flex-direction: column;
@@ -748,9 +748,9 @@
   .botonIzquierda::after {
     content: "";
     position: absolute;
-    background-color: rgba(22, 24, 26);
-    border: 0.08rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: 0.3rem 0.3rem 0 rgb(69, 196, 49);
+    background-color: var(--negro-1);
+    border: 0.08rem solid var(--color-2);
+    box-shadow: 0.3rem 0.3rem 0 var(--color-1);
     border-radius: 5px;
     transition: background-color 0.3s ease;
   }
@@ -759,9 +759,9 @@
   .botonDerecha::after {
     content: "";
     position: absolute;
-    background-color: rgba(22, 24, 26);
-    border: 0.08rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: -0.3rem -0.3rem 0 rgb(69, 196, 49);
+    background-color: var(--negro-1);
+    border: 0.08rem solid var(--color-2);
+    box-shadow: -0.3rem -0.3rem 0 var(--color-1);
     border-radius: 5px;
     transition: background-color 0.3s ease;
   }
@@ -807,30 +807,30 @@
   }
 
   .botonIzquierda:hover::before {
-    background-color: rgba(22, 24, 26);
-    border: 0.08rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: 0.3rem 0.3rem 0 rgb(69, 196, 49);
+    background-color: var(--negro-1);
+    border: 0.08rem solid var(--color-2);
+    box-shadow: 0.3rem 0.3rem 0 var(--color-1);
     z-index: 1;
   }
 
   .botonIzquierda:hover::after {
-    background-color: rgba(22, 24, 26);
-    border: 0.08rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: 0.3rem 0.3rem 0 rgb(69, 196, 49);
+    background-color: var(--negro-1);
+    border: 0.08rem solid var(--color-2);
+    box-shadow: 0.3rem 0.3rem 0 var(--color-1);
     z-index: 2;
   }
 
   .botonDerecha:hover::before {
-    background-color: rgba(22, 24, 26);
-    border: 0.08rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: -0.3rem -0.3rem 0 rgb(69, 196, 49);
+    background-color: var(--negro-1);
+    border: 0.08rem solid var(--color-2);
+    box-shadow: -0.3rem -0.3rem 0 var(--color-1);
     z-index: 2;
   }
 
   .botonDerecha:hover::after {
-    background-color: rgba(22, 24, 26);
-    border: 0.08rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: -0.3rem -0.3rem 0 rgb(69, 196, 49);
+    background-color: var(--negro-1);
+    border: 0.08rem solid var(--color-2);
+    box-shadow: -0.3rem -0.3rem 0 var(--color-1);
     z-index: 1;
   }
 
@@ -846,12 +846,12 @@
 
   .card {
     width: 40rem;
-    background: rgba(22, 24, 26);
+    background: var(--negro-1);
     backdrop-filter: blur(10px);
     border-radius: 10px;
     padding: 1.5rem;
-    border: 0.1rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: 0.6rem 0.6rem 0 rgba(69, 196, 49);
+    border: 0.1rem solid var(--color-2);
+    box-shadow: 0.6rem 0.6rem 0 var(--color-1);
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -861,12 +861,12 @@
   
   .indicadores {
     width: auto;
-    background: rgba(22, 24, 26);
+    background: var(--negro-1);
     backdrop-filter: blur(10px);
     border-radius: 8px;
     padding: 0.8rem 1.3rem;
-    border: 0.1rem solid rgba(68, 214, 44, 0.2);
-    box-shadow: 0.4rem 0.4rem 0 rgba(69, 196, 49);
+    border: 0.1rem solid var(--color-2);
+    box-shadow: 0.4rem 0.4rem 0 var(--color-1);
     text-align: center;
     display: flex;
     flex-direction: row;
@@ -877,8 +877,8 @@
     width: 1.6rem;
     height: 0.5rem;
     border-radius: 10px;
-    background-color: rgba(233, 236, 232, 0.8);
-    border: 0.1rem rgba(233, 236, 232, 0.8);
+    background-color: var(--blanco-1);
+    border: 0.1rem var(--blanco-1);
     transition: all 0.3s ease;
     cursor: pointer;
   }
@@ -888,16 +888,16 @@
   }
     
   .indicador.activo {
-    background-color: rgba(69, 196, 49);
-    border: 0.1rem rgba(69, 196, 49);
+    background-color: var(--color-1);
+    border: 0.1rem var(--color-1);
     transform: scale(1.3);
   }
 
   .titulo {
-    color: white;
+    color: var(--blanco-1);
     margin: 0;
     font-size: 1.7rem;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: var(--Titulo);
     width: 100%;
     text-align: start;
     font-weight: 500;
@@ -914,12 +914,12 @@
 
   .botonEnlace {
     position: relative;
-    background: rgba(69, 196, 49);
+    background: var(--color-1);
     border: none;
     border-radius: 5px;
     width: 2.5rem;
     height: 2.5rem;
-    color: black;
+    color: var(--negro-1);
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -935,7 +935,7 @@
 
   .descripcion {
     width: auto;
-    background: rgba(69, 196, 49);
+    background: var(--color-1);
     backdrop-filter: blur(10px);
     border-radius: 10px;
     padding: 1rem;
@@ -945,14 +945,13 @@
   }
 
   .texto {
-    color: rgba(22, 24, 26);
+    color: var(--negro-1);
     margin: 0;
     line-height: 1.6;
     font-size: 0.9rem;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: var(--Texto);
     text-align: start;
     font-weight: bold;
-    display: -webkit-box;
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
@@ -964,9 +963,9 @@
     width: 100%;
     aspect-ratio: 4/2;
     border-radius: 10px;
-    border: 0.3rem rgb(232, 236, 241);
+    border: 0.3rem var(--blanco-1);
     padding: 2rem;
-    background: rgb(232, 236, 241);
+    background: var(--blanco-1);
     backdrop-filter: blur(2rem);
     object-fit: contain;
   }
@@ -976,8 +975,8 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    color: rgba(22, 24, 26);
-    border: 0.15rem solid rgba(68, 214, 44, 0.2);
+    color: var(--negro-2);
+    border: 0.15rem solid var(--color-2);
     border-radius: 10px;
     padding: 0.5rem;
   }
